2008-09-13  Dave Hyatt  <hyatt@apple.com>

        More scrollbar refactoring.
        
        Reviewed by Sam Weinig

        * WebScrollBar.h:

2008-09-08  Adam Roben  <aroben@apple.com>

        Respect the font smoothing preference when drawing via WebKitGraphics

        Reviewed by Dave Hyatt.

        * WebKitGraphics.cpp:
        (makeFont): Check the font smoothing preference and update the
        FontDescription's rendering mode based on it.

2008-09-08  Steve Falkenburg  <sfalken@apple.com>

        Another Windows nightly build fix.
        
        Remove non-production versions of CLSIDs since we'll use registry free COM with
        an embedded manifest now in all cases to find COM classes.
        
        Reviewed by Sam Weinig.

        * ForEachCoClass.cpp:
        (setUseOpenSourceWebKit): Remove COM registration code.
        * Interfaces/WebKit.idl: Remove non-production COM classes

2008-09-07  Cameron Zwarich  <cwzwarich@uwaterloo.ca>

        Reviewed by Maciej Stachowiak.

        Bug 20704: Replace the KJS namespace
        <https://bugs.webkit.org/show_bug.cgi?id=20704>

        Rename the KJS namespace to JSC.

        * WebCoreStatistics.cpp:
        * WebJavaScriptCollector.cpp:
        * WebScriptCallFrame.cpp:
        (WebScriptCallFrame::jsValueToString):
        * WebScriptCallFrame.h:
        (WebScriptCallFrame::state):
        * WebView.cpp:
        (WebView::WebView):
        (WebView::stringByEvaluatingJavaScriptFromString):

2008-09-05  Dave Hyatt  <hyatt@apple.com>

        Add support for runtime switchability of the Aqua look and the native look on Windows.
        Make RenderThemeWin compile by default even when USE(SAFARI_THEME) is set.

        Reviewed by Adam Roben

        * Interfaces/IWebPreferencesPrivate.idl:
        * WebPreferenceKeysPrivate.h:
        * WebPreferences.cpp:
        (WebPreferences::initializeDefaultSettings):
        (WebPreferences::shouldPaintNativeControls):